# act-ml-workflow

./: .gitignore  DataPreprocessing.ipynb  README.md  pyproject.toml
src/: API.ipynb  DataPreprocessing.ipynb  data.ipynb  despliegue.ipynb  model2.pkl  model_dummy.ipynb  score.py
